--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+  <li>
+    <h2><p (click)="getCustomerDetails()">Get customer details</p></h2>
+  </li>
 </ul>
 
 <router-outlet></router-outlet>
